added gltf-model from blender

--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
         smoothCount="10"
         smoothTolerance=".01"
         smoothThreshold="5"
+        size="0.254"
       >
         <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
         <a-entity
-          gltf-model="<path-to-your-model>"
+          gltf-model="url(./gltf-model/cube.gltf)"
           scale="5 5 5"
           position="50 150 0"
         >
