--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
       <a-nft
         type="nft"
-        url="./images/TheChoz3nsLogo"
+        url="./glTF-Sample-Models/2.0/AnimatedCube/glTF/AnimatedCube_BaseColor"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
@@ -61,7 +61,7 @@
       >
         <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
         <a-entity
-          gltf-model="url(./gltf-model/cube.gltf)"
+          gltf-model="url(./glTF-Sample-Models/2.0/AnimatedCube/glTF/AnimatedCube_BaseColor.png)"
           scale="5 5 5"
           position="50 150 0"
         >
