--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 
   <body style="margin: 0px; overflow: hidden">
     <a-scene embedded arjs>
-      <a-marker
-        preset="custom"
-        type="pattern"
-        url="./ar_marker/pattern-TheChoz3ns.patt"
-      >
-        <a-entity
-          position="0 -1 0"
-          scale="0.05 0.05 0.05"
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        >
-        </a-entity>
+      <a-marker preset="hiro">
+        <a-box position="0 0.5 0" materials="color: red;">
+          <a-animation
+            attribute="rotation"
+            dur="3000"
+            to="360 360 0"
+            repeat="indefinite"
+            easing="linear"
+          >
+          </a-animation>
+        </a-box>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
