--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <body style="margin: 0px; overflow: hidden">
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-        <a-box position="0 0.5 0" materials="color:red;" color="red">
+        <a-box
+          position="0 0.5 0"
+          metalness="2"
+          height="5"
+          repeat="15"
+          width="5"
+          depth="2"
+          color="gold"
+        >
           <a-animation
             attribute="rotation"
             dur="3000"
