--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body style="margin: 0px; overflow: hidden">
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-        <a-box position="0 0.5 0" height="5" repeat="1" width="1" color="gold">
+        <a-box position="0 1.5 0" height="1"  width="1" color="gold">
           <a-animation
             attribute="rotation"
             dur="3000"
